--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a href="index.html" class="activo">Inicio</a>
 				<a href="shop.html">Shop</a>
 				<a href="compras.html">Mi Cuenta</a>
-				<a href="">Mis Compras</a>
+				<a href="carrito.html"><img  class="carrito" src="img/carrito.png" alt=""></a>
 			</nav>
 		</div>
 
