--- a/shop.html
+++ b/shop.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/shop.css">
     <script defer src="/js/script.js"></script>
+    <script defer src="/js/carro.js"></script>
     <link rel="icon" href="https://i.pinimg.com/564x/c2/a9/55/c2a955cb45c007a92c56fb967cf4a335.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <title>Shop - SkateLife</title>
@@ -21,7 +22,7 @@
 				<a href="index.html" class="activo">Inicio</a>
 				<a href="shop.html">Shop</a>
 				<a href="compras.html">Tu Cuenta</a>
-                <a href="">Compras</a>
+                <a href="carrito.html">Compras</a>
 			</nav>
 		</div>
 	</header>
@@ -60,70 +61,51 @@
     <div class="wrap">
 		<h1>SHOP</h1>
 		<div class="store-wrapper">
-			<div class="category_list">
-				<a href="#" class="category_item" category="all">Todos</a>
-				<a href="#" class="category_item" category="tablas">Tablas</a>
-				<a href="#" class="category_item" category="indumentaria">Indumentaria</a>
-				<a href="#" class="category_item" category="accesorios">Accesorios de Skate</a>
-				<a href="#" class="category_item" category="accesoriosdos">Accesorios</a>
-				<a href="#" class="category_item" category="zapatillas">Zapatillas</a>
-			</div>
 			<section class="products-list">
-				<div class="product-item" category="tablas">
+				<div class="product-item" category="tablas" id="tablas">
 					<img src="https://i.pinimg.com/564x/6c/c3/30/6cc330f8cd91afebe95dce47d7d6aef3.jpg" alt="" >
-					<a href="#">Tabla Element Sector 8.5</a>
-                    <button class="btn-1">Agregar al Carrito</button>
+					<a href="#">Tabla Element Sector 8.5 <br><p>$15700</p></a>
+                    <button class="btn-1" id="1">Agregar al Carrito</button>
 				</div>
-				<div class="product-item" category="laptops">
+				<div class="product-item" category="zapatillas">
 					<img src="https://i.pinimg.com/564x/71/12/64/711264f2c24bad19fe2ea91d8d1f9e4f.jpg" alt="" >
-					<a href="#">Nike SB Nyjah Huston</a>
-                    <button class="btn-1">Agregar al Carrito</button>
+					<a href="#">Nike SB Nyjah Huston <br><p>$15700</p></a>
+                    <button class="btn-1" id="2">Agregar al Carrito</button>
 				</div>
 				<div class="product-item" category="Accesorios">
 					<img src="https://i.pinimg.com/564x/a8/8d/a0/a88da0367efcf7fa0b626dfd107dbc3a.jpg" alt="" >
-					<a href="#">Ruedas Pat Duffy Crest 2.0 53Mm</a>
-                    <button class="btn-1">Agregar al Carrito</button>
+					<a href="#">Ruedas Pat Duffy Crest 2.0 53Mm <br><p>$15700</p></a>
+                    <button class="btn-1" id="3">Agregar al Carrito</button>
 				</div>
 				<div class="product-item" category="zapatillas">
 					<img src="https://i.pinimg.com/564x/4f/cb/09/4fcb0967b9aedc9b645f894d336e0c8c.jpg" alt="" >
-					<a href="#">Nike SB Stefan Janoski</a>
-                    <button class="btn-1">Agregar al Carrito</button>
+					<a href="#">Nike SB Stefan Janoski <br><p>$15700</p></a>
+                    <button class="btn-1" id="4">Agregar al Carrito</button>
 				</div>
 				<div class="product-item" category="tablas">
 					<img src="https://i.pinimg.com/564x/35/cd/18/35cd184f7fa9ac68d93ee6f4892d9004.jpg" alt="" >
-					<a href="#">Tabla Woodoo Inst.bh 8</a>
-                    <button class="btn-1">Agregar al Carrito</button>
+					<a href="#">Tabla Woodoo Inst.bh 8 <br><p>$15700</p></a>
+                    <button class="btn-1" id="5">Agregar al Carrito</button>
 				</div>
 				<div class="product-item" category="accesoriosdos">
 					<img src="https://i.pinimg.com/564x/b4/99/0e/b4990e53638eb2c3ae67e964193cc788.jpg" alt="" >
-					<a href="#">Gorra Nike Sportswear H86 Futura</a>
-                    <button class="btn-1">Agregar al Carrito</button>
+					<a href="#">Gorra Nike Sportswear H86 Futura <br><p>$15700</p></a>
+                    <button class="btn-1" id="6">Agregar al Carrito</button>
 				</div>
 				<div class="product-item" category="accesoriosdos">
 					<img src="https://i.pinimg.com/564x/7b/82/48/7b824829201e3821af28fafc72ea01ca.jpg" alt="" >
-					<a href="#">Riñonera Urbana</a>
-                    <button class="btn-1">
+					<a href="#">Riñonera Urbana <br><p>$15700</p></a>
+                    <button class="btn-1" id="7">
                         Agregar al Carrito
                     </button>
 				</div>
 				<div class="product-item" category="accesorios">
 					<img src="https://i.pinimg.com/564x/68/ed/9f/68ed9f7b8298e4a41be94d6ec1396214.jpg" alt="" >
-					<a href="#">Truck Independent 149 Stage 11 Pro Milton Martinez</a>
-                    <button class="btn-1">Agregar al Carrito</button>
+					<a href="#">Truck Independent 149 Stage 11 Pro Milton Martinez <br><p>$15700</p></a>
+                    <button class="btn-1" id="8">Agregar al Carrito</button>
 				</div>
 			</section>
 		</div>
 	</div>
-    
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
 </body>
 </html>
